# Ifrit-v2

./: .clang-format  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  DOCS.md  GALLERY.md  Ifrit-v2x-softrenderer-cuda.sln  Ifrit-v2x.sln  Ifrit-v2x.vcxproj  IfritMain.cpp  IfritShaders.cu  IfritShaders.cuh  PropertySheet.props  README.md  README_cn.md  TODO.Ayanami.md  TODO.md  gallery.md
components/llvmexec/Ifrit-v2-Component-LLVMExec/: Build.cmd  CMakeLists.txt  Ifrit-v2-Component-LLVMExec.vcxproj  Ifrit-v2-Component-LLVMExec.vcxproj.filters  PropertySheet.props
components/llvmexec/Ifrit-v2-Component-LLVMExec/include/: LLVMExecRuntime.Decl.h
components/llvmexec/Ifrit-v2-Component-LLVMExec/src/: LLVMExecRuntime.cpp
core/: .gitignore  CMakeLists.txt  Ifrit-v2x.vcxproj  IfritMain.cpp
core/asset/shaders/: compile.bat  demo.frag.hlsl  demo.frag.hlsl.spv  demo.vert.hlsl  demo.vert.hlsl.spv  diffuse.frag.hlsl  diffuse.frag.hlsl.spv  diffuse.vert.hlsl  helloworld.hlsl  helloworld.hlsl.spv
core/asset/shaders/raytracer/: compile.bat  rtdemo.rchit.hlsl  rtdemo.rchit.spv  rtdemo.rgen.hlsl  rtdemo.rgen.spv  rtdemo.rmiss.hlsl  rtdemo.rmiss.spv
core/demo/: AccelStructDemo.cpp  AccelStructDemo.h  DefaultDemo.cpp  MeshletDemo.cpp  OglBenchmarking.cpp  ShaderVMDemo.cpp  ShaderVMDemo.h  Skybox.cpp  Skybox.h
core/demo/shader/: DefaultDemoShaders.cu  DefaultDemoShaders.cuh  MeshletDemoShaders.cuh  SkyboxShaders.cu  SkyboxShaders.cuh
core/include/: IfritIncludes.h
core/include/core/cuda/: CudaUtils.cuh
core/include/core/data/: Image.h
core/include/core/definition/: CoreDefs.h  CoreExports.h  CoreTypes.h
core/include/core/utility/: CoreLogger.h  CoreUtils.h
core/include/engine/base/: BufferLayout.h  FrameBuffer.h  RaytracerBase.h  Renderer.h  ShaderRuntime.h  Shaders.h  Structures.h  VaryingDescriptor.h  VaryingStore.h  VertexBuffer.h  VertexShaderResult.h
core/include/engine/bufferman/: BufferManager.h
core/include/engine/comllvmrt/: WrappedLLVMRuntime.h
core/include/engine/export/: EngineCommonExport.h  ShaderVMExport.h  TileRasterRendererExport.h
core/include/engine/imaging/: BufferedImage.h  BufferedImageBuilder.h  BufferedImageSampler.h  LayeredBufferedImage.h
core/include/engine/math/: ShaderBuiltinCuda.cuh  ShaderOps.h  ShaderOpsCuda.cuh
core/include/engine/raytracer/: RtShaders.h  TrivialRaytracer.h  TrivialRaytracerContext.h  TrivialRaytracerWorker.h
core/include/engine/tileraster/: TileRasterCommon.h  TileRasterContext.h  TileRasterRenderer.h  TileRasterWorker.h
core/include/engine/tilerastercuda/: TileRasterCommonResourceCuda.cuh  TileRasterConstantsCuda.h  TileRasterDeviceContextCuda.cuh  TileRasterImageOpInvocationsCuda.cuh  TileRasterRendererCuda.h
core/include/math/: LinalgOps.h  VectorOps.h
core/include/math/fastutil/: FastUtil.h  FastUtilSimd.h
core/include/math/simd/: SimdVectors.h
core/include/presentation/backend/: AdaptiveBackendBuilder.h  BackendProvider.h  TerminalCharColorBackend.h
core/include/presentation/window/: AdaptiveWindowBuilder.h  GLFWWindowProvider.h  TerminalProvider.h
core/include/utility/loader/: ImageLoader.h
core/shader/: opengl.backend.vert.glsl  opengl.benchmarking.sponza.vert.glsl
core/src/core/export/: CommonExport.cpp
core/src/engine/base/: VaryingDescriptor.cpp  VertexShaderResult.cpp
core/src/engine/bufferman/: BufferManager.cpp
core/src/engine/comllvmrt/: WarppedLLVMRuntime.cpp
core/src/engine/export/: ComLLVMRtExport.cpp  EngineCommonExport.cpp  ShaderVMExport.cpp  TileRasterRendererExport.cpp
core/src/engine/imaging/: BufferedImageBuilder.cpp  BufferedImageSampler.cpp  LayeredBufferedImage.cpp
core/src/engine/math/: ShaderOps.cpp
core/src/engine/raytracer/: RtShaders.cpp  TrivialRaytracer.cpp  TrivialRaytracerWorker.cpp
core/src/engine/tileraster/: TileRasterRenderer.cpp  TileRasterWorker.cpp
core/src/engine/tilerastercuda/: TileRasterCoreInvocationCuda.cu  TileRasterRendererCuda.cpp
core/src/presentation/backend/: OpenGLBackend.cpp
core/src/presentation/window/: GLFWWindowProvider.cpp  TerminalProvider.cpp  WindowProvider.cpp
core/src/utility/loader/: ImageLoader.cpp  WavefrontLoader.cpp
projects/core/: CMakeLists.txt
projects/core/src/application/: Application.cpp
projects/core/src/assetmanager/: Asset.cpp  (+6 more)
projects/demo/: .gitignore  CMakeLists.txt  ifrit.demo.ayanami.cpp  ifrit.demo.backup.cpp  ifrit.demo.backup2.cpp  ifrit.demo.cpp  ifrit.demo.memdiag.cpp  ifrit.demo.syaro.cpp  ifrit.demo.test.cpp  rmcache.sh
projects/demo/Assets/: .gitignore
projects/demo/shader/: compile.bat  compile.py  ifrit.demo.frag.spv  ifrit.demo.vert  ifrit.demo.vert.spv  ifrit.meshlet.clear.comp  ifrit.meshlet.clear.comp.spv  ifrit.meshlet.dynlod.comp  ifrit.meshlet.dynlod.comp.spv  ifrit.meshlet.mesh  ifrit.meshlet.mesh.spv  ifrit.particle.comp.spv
projects/display/: CMakeLists.txt
projects/imaging/: CMakeLists.txt
projects/ircompile/: CMakeLists.txt
projects/ircompile/src/: LLVMExecRuntime.cpp
projects/meshproclib/: .gitignore  CMakeLists.txt  meshproclib.cpp  meshproclib.vcxproj  meshproclib.vcxproj.filters
projects/rhi/: CMakeLists.txt
projects/rhi/src/: RhiSelector.cpp
projects/runtime/: CMakeLists.txt
projects/softgraphics/: CMakeLists.txt  PropertySheet.props  ifrit.softrenderer.cpp  readme.md
projects/softgraphics/demo/: AccelStructDemo.cpp  AccelStructDemo.h  DefaultDemo.cpp  DefaultDemo.h  MeshletDemo.cpp  MeshletDemo.h  OglBenchmarking.cpp  OglBenchmarking.h  ShaderVMDemo.cpp  ShaderVMDemo.h  Skybox.cpp  Skybox.h
projects/softrenderer/: .gitignore  CMakeLists.txt  Ifrit-v2x.vcxproj  ifrit.softrenderer.cpp
projects/softrenderer/demo/: AccelStructDemo.cpp  AccelStructDemo.h  DefaultDemo.cpp  DefaultDemo.h  MeshletDemo.cpp  MeshletDemo.h  OglBenchmarking.cpp  OglBenchmarking.h  ShaderVMDemo.cpp  ShaderVMDemo.h  Skybox.cpp
projects/softrenderer/include/: IfritExports.h  IfritIncludes.h
projects/softrenderer/shader/: opengl.benchmarking.sponza.frag.glsl
projects/vkgraphics/: CMakeLists.txt
projects/vkrenderer/: CMakeLists.txt
(+909 files in other folders)
